new api endpoint for user existing check for security reasons
